Changes to Report

--- a/ReportUnit/Properties/Resources.resx
+++ b/ReportUnit/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Reports" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Templates\Reports.cshtml;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="TimeAnalytics" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Templates\TimeAnalytics.cshtml;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
